--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   alert-webhook:
-    build: .
     image: xxiu/alert-webhook
-    command: ' -defaultRobot=https://oapi.dingtalk.com/robot/send?access_token=xxxx'
+    command: ' -url=https://oapi.dingtalk.com/robot/send?access_token=xxxx'
     ports:
       - "8080:8080"
